# texture

./: CMakeLists.txt  Makefile  readme  readme.md  tasks.txt  test.c  test.sh  texture  texture.c
include/: assert.h  dict.h  editor.h  highlight.h  keymap.h  logger.h  render.h  textureTest.h  utils.h  vector.h
src/: CMakeLists.txt  assert.c  dict.c  editor.c  highlight.c  keymap.c  logger.c  render.c  test.c  texture.c  utils.c  vector.c
tests/: cmakelists.txt  dictTest.c  editorTest.c  highlightTest.c  keymapTest.c  loggerTest.c  renderTest.c  test_runner.c  tests.h  textureTest.c  utilsTest.c  vectorTest.c
